fix: reduced gap between image and vid in home page

--- a/css/home.css
+++ b/css/home.css
@@ -163,6 +163,7 @@
   }
 
   #content .quiSommesNous{
+    margin-top: -50%;
   }
 
   #content .quiSommesNous-content{
